Fix invisible color input with latest seven style when color is white

--- a/css/fullcalendar-views-admin.css
+++ b/css/fullcalendar-views-admin.css
@@ -2,7 +2,7 @@
   height: 35px;
   width: 35px;
   padding: 0;
-  border: none;
+  border: 1px solid;
   border-radius: 100%;
 }
 .form-type-color input::-moz-color-swatch {
